--- a/app/src/app/pages/characteristic-list/characteristic-list.component.scss
+++ b/app/src/app/pages/characteristic-list/characteristic-list.component.scss
@@ -127,10 +127,6 @@
     transform: translateY(-3px);
     box-shadow: $box-shadow-medium;
     border-color: $herb-green;
-
-    .trait-image img {
-      transform: scale(1.05);
-    }
   }
 
   &.has-image, &.has-color {
