--- a/app/src/app/pages/palm-detail/palm-detail.component.scss
+++ b/app/src/app/pages/palm-detail/palm-detail.component.scss
@@ -331,10 +331,6 @@
     }
 
     &:hover {
-      .palm-image {
-        transform: scale(1.04);
-      }
-
       .image-overlay {
         opacity: 1;
       }
