--- a/app/src/app/pages/taxonomy-list/taxonomy-list.component.scss
+++ b/app/src/app/pages/taxonomy-list/taxonomy-list.component.scss
@@ -98,10 +98,6 @@
 
   &:hover {
     background-color: rgba($herb-green, 0.06);
-
-    .sf-image img {
-      transform: scale(1.05);
-    }
   }
 
   .sf-image {
